--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+layout: splash
+header:
+    overlay_color: "#000"
+    overlay_filter: "0.5"
+    overlay_image: /assets/images/cave-1839298.jpg
+excerpt: '"egy gépezet előtt ült, amelynek kis üveglapján számok és alakzatok váltakoztak, előtte az asztalon az ábécé valamennyi betűje sorakozott elefántcsont tálcára ragasztott kis maszatos kockákon" Philip Pullman: A titokzatos kés'
 author_profile: true
 ---
