--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -13,7 +13,7 @@ permalink: /tags/
             {% assign sorted_pages = site.pages | sort_natural: "title" %}
             {% for page in sorted_pages %}
                 {% if page.tags contains tag %}
-                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                    <li><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>
                 {% endif %}
             {% endfor %}
         </ul>
